--- a/SignLanguage.ipynb
+++ b/SignLanguage.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers"
    ]
   },
   {
@@ -63,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53894451",
+   "id": "2dfe258b",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8a4aed4",
+   "id": "2146b90a",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5dbd64eb",
+   "id": "345fd9b0",
    "metadata": {},
    "outputs": [
     {
@@ -136,9 +137,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d73bc35",
+   "metadata": {},
+   "source": [
+    "### PREPROCESSING THE DATA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "40d79ed2",
+   "id": "734eb9b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,30 +158,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b2e8ca56",
-   "metadata": {},
-   "source": [
-    "### PREPROCESSING THE DATA"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b37b7c64",
+   "execution_count": 8,
+   "id": "392f73ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Defining some preprocessing layers\n",
     "\n",
     "#Defining the normalization layer\n",
-    "normalization_layer = tf.keras.layers.Rescaling(1./255)\n",
+    "resize_and_rescale = tf.keras.Sequential([\n",
+    "  layers.Resizing(img_height, img_width),\n",
+    "  layers.Rescaling(1./255)\n",
+    "])\n",
+    "\n",
     "\n",
     "#Augmenting the data\n",
     "data_augmentation = tf.keras.Sequential([\n",
     "  layers.RandomFlip(\"horizontal_and_vertical\"),\n",
     "  layers.RandomRotation(0.2),\n",
-    "])\n"
+    "])\n",
+    "train_ds = train_ds.map(lambda x, y: (data_augmentation(x, training=True), y), \n",
+    "                num_parallel_calls=AUTOTUNE)\n"
    ]
   }
  ],
